@@ -1,105 +1,62 @@
 package com.mst.repositories;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.stereotype.Repository;
-
+import com.mst.security.CurrentUserContext;
+import java.sql.Types;
 import java.util.*;
+import java.util.stream.Collectors;
+import org.springframework.jdbc.core.*;
+import org.springframework.stereotype.Repository;
+import org.springframework.web.server.ResponseStatusException;
+import static org.springframework.http.HttpStatus.*;
+import static com.mst.services.PurchaseInvoiceFinancialRules.*;
 
+/** frmLoadGRN, InvPurchaseInvoice BLL 0581:975-1103 and InvGrn BLL 0576:2684. */
 @Repository
 public class GrnLoaderRepository {
-
-    @Autowired
-    private JdbcTemplate jdbcTemplate;
-
-    // Load Pending Regular GRNs
-    public List<Map<String, Object>> getPendingGrns(int orgId, int compId, int docTypeId, int yearId,
-                                                    String fromDate, String toDate, String branchIds,
-                                                    Integer supplierCustomerId, Integer orderId) {
-        try {
-            StringBuilder sb = new StringBuilder("EXEC usp_getGrnLoaderDataForPurchaseInvoice ");
-            sb.append("@OrganizationId=").append(orgId);
-            sb.append(", @CompanyId=").append(compId);
-            sb.append(", @DocumentTypeId=").append(docTypeId);
-            if (financialYearCheck(yearId)) sb.append(", @FinancialYearId=").append(yearId);
-            if (supplierCustomerId != null && supplierCustomerId > 0) sb.append(", @SupplierCustomerId=").append(supplierCustomerId);
-            if (orderId != null && orderId > 0) sb.append(", @OrderId=").append(orderId);
-            if (fromDate != null && !fromDate.isEmpty()) sb.append(", @FromDate='").append(fromDate).append("'");
-            if (toDate != null && !toDate.isEmpty()) sb.append(", @ToDate='").append(toDate).append("'");
-            if (branchIds != null && !branchIds.trim().isEmpty()) sb.append(", @BranchesIds='").append(branchIds).append("'");
-
-            return jdbcTemplate.queryForList(sb.toString());
-        } catch (Exception e) {
-            e.printStackTrace();
-            return Collections.emptyList();
-        }
+    private final JdbcTemplate jdbc;private final CurrentUserContext context;private final PurchaseInvoiceRecordRepository rights;private final PurchaseInvoiceWriteRepository config;
+    public GrnLoaderRepository(JdbcTemplate jdbc,CurrentUserContext context,PurchaseInvoiceRecordRepository rights,PurchaseInvoiceWriteRepository config){this.jdbc=jdbc;this.context=context;this.rights=rights;this.config=config;}
+    private void access(int type){if(type==46)rights.requireRight(56,"View");else if(type==137)rights.requireRight(138,"View");}
+    private SqlParameterValue date(String text){try{return new SqlParameterValue(Types.DATE,text==null||text.isBlank()?null:java.sql.Date.valueOf(text));}catch(IllegalArgumentException invalid){throw new IllegalArgumentException("Use a valid GRN filter date");}}
+    private SqlParameterValue positive(Integer id){return new SqlParameterValue(Types.INTEGER,id!=null&&id>0?id:null);}
+    public List<Map<String,Object>> getUserBranches(int ignoredOrg,int ignoredCompany,int ignoredUser,int type){
+        access(type);int org=context.currentOrganizationId(),company=context.currentCompanyId(),user=context.currentUserId();
+        if(Boolean.parseBoolean(config.configuration(org,company,"PurchaseInvoiceBranchWise")))return jdbc.queryForList("SELECT Id AS BranchId,BranchName FROM dbo.Branches WHERE Id=? AND OrganizationId=? AND CompanyId=?",context.currentBranchId(),org,company);
+        // Original spelling is Branchs. A broad raw Branch fallback previously hid the wrong name.
+        var rows=jdbc.queryForList("EXEC dbo.USP_GetBranchsAllocatedToUserFromGrn @OrganizationId=?,@CompanyId=?,@UserId=?,@DocumentTypeId=?",org,company,user,positive(type));
+        // The existing procedure's unparenthesized OR can return other tenants' allocations.
+        // Leave the database object unchanged and enforce this user's allocation here.
+        var allocated=new HashSet<>(jdbc.queryForList("SELECT a.BranchId FROM dbo.BranchesAllocationToUser a JOIN dbo.Branches b ON b.Id=a.BranchId AND b.CompanyId=a.CompanyId WHERE a.OrganizationId=? AND a.CompanyId=? AND a.UserId=?",Integer.class,org,company,user));
+        return rows.stream().filter(r->allocated.contains(i(copy(r),"BranchId"))).toList();
     }
-
-    // Load Pending Market GRNs
-    public List<Map<String, Object>> getPendingMarketGrns(int orgId, int compId, int docTypeId,
-                                                          String fromDate, String toDate,
-                                                          Integer supplierCustomerId) {
-        try {
-            StringBuilder sb = new StringBuilder("EXEC Sp_InvPurchaseInvoice_GetAllMethod ");
-            sb.append("@OrganizationId=").append(orgId);
-            sb.append(", @CompanyId=").append(compId);
-            sb.append(", @DocumentTypeId=").append(docTypeId);
-            if (supplierCustomerId != null && supplierCustomerId > 0) sb.append(", @SupplierCustomerId=").append(supplierCustomerId);
-            if (fromDate != null && !fromDate.isEmpty()) sb.append(", @FromDate='").append(fromDate).append("'");
-            if (toDate != null && !toDate.isEmpty()) sb.append(", @ToDate='").append(toDate).append("'");
-            sb.append(", @Activity='GetPendingMarketGrnForPurchaseInvoice'");
-
-            return jdbcTemplate.queryForList(sb.toString());
-        } catch (Exception e) {
-            e.printStackTrace();
-            return Collections.emptyList();
-        }
+    private Set<Integer> branches(int type){return getUserBranches(0,0,0,type).stream().map(r->i(copy(r),"BranchId")).collect(Collectors.toCollection(LinkedHashSet::new));}
+    private Set<Integer> selectedBranches(String input,int type){
+        var allowed=branches(type);if(input==null||input.isBlank())return allowed;
+        var selected=new LinkedHashSet<Integer>();for(String token:input.split(",")){if(token.isBlank())continue;int id;try{id=Integer.parseInt(token.trim());}catch(NumberFormatException invalid){throw new IllegalArgumentException("Select valid GRN branches");}if(!allowed.contains(id))throw new ResponseStatusException(FORBIDDEN,"GRN branch is not allocated to this user");selected.add(id);}return selected;
     }
-
-    // Load GRN Detail lines by GRN Header ID
-    public List<Map<String, Object>> getGrnDetails(int grnId) {
-        try {
-            String sql = "EXEC Sp_InvGrnDetail_GetAllMethod @InvGrnId=?, @Activity='ReadByInvGrnId'";
-            return jdbcTemplate.queryForList(sql, grnId);
-        } catch (Exception e1) {
-            try {
-                String sql = "SELECT * FROM InvGrnDetail WHERE InvGrnId = ?";
-                return jdbcTemplate.queryForList(sql, grnId);
-            } catch (Exception e2) {
-                e2.printStackTrace();
-                return Collections.emptyList();
-            }
-        }
+    public List<Map<String,Object>> getPendingGrns(int ignoredOrg,int ignoredCompany,int type,int ignoredYear,String from,String to,String branchIds,Integer supplier,Integer order){
+        access(type);var selected=selectedBranches(branchIds,type);var start=date(from);var end=date(to);if(selected.isEmpty())return List.of();
+        var rows=jdbc.queryForList("EXEC dbo.usp_getGrnLoaderDataForPurchaseInvoice @OrganizationId=?,@CompanyId=?,@DocumentTypeId=?,@FinancialYearId=?,@SupplierCustomerId=?,@FromDate=?,@ToDate=?,@BranchesIds=? WITH RECOMPILE",context.currentOrganizationId(),context.currentCompanyId(),type,context.currentFinancialYearId(),positive(supplier),start,end,selected.stream().map(String::valueOf).collect(Collectors.joining(",")));
+        // GoldenAcedb's current procedure has no @OrderId parameter; its result includes this key.
+        return rows.stream().filter(r->order==null||order<=0||i(copy(r),"PurchaseOrderId")==order).toList();
     }
-
-    // Get GRN Header by ID
-    public Map<String, Object> getGrnHeader(int grnId) {
-        try {
-            String sql = "EXEC Sp_InvGrn_GetAllMethod @Id=?, @Activity='ReadById'";
-            List<Map<String, Object>> list = jdbcTemplate.queryForList(sql, grnId);
-            return (list != null && !list.isEmpty()) ? list.get(0) : null;
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
+    public List<Map<String,Object>> getPendingMarketGrns(int ignoredOrg,int ignoredCompany,int type,String from,String to,Integer supplier){
+        access(type);
+        // frmLoadGRN.InitializeComponent:765 hides rdMarketGrn. GoldenAcedb also has no
+        // GetPendingMarketGrnForPurchaseInvoice activity; do not manufacture an empty result.
+        throw new ResponseStatusException(METHOD_NOT_ALLOWED,"The separate Market GRN loader is hidden in the desktop application. Use the regular GRN list.");
     }
-
-    // Get User Allocated Branches for GRN
-    public List<Map<String, Object>> getUserBranches(int orgId, int compId, int userId, int docTypeId) {
-        try {
-            String sql = "EXEC USP_GetBranchesAllocatedToUserFromGrn @OrganizationId=?, @CompanyId=?, @UserId=?, @DocumentTypeId=?";
-            return jdbcTemplate.queryForList(sql, orgId, compId, userId, docTypeId);
-        } catch (Exception e) {
-            try {
-                String sql = "SELECT Id as BranchId, BranchName FROM Branch WHERE (OrganizationId = ? OR OrganizationId IS NULL) AND (CompanyId = ? OR CompanyId IS NULL)";
-                return jdbcTemplate.queryForList(sql, orgId, compId);
-            } catch (Exception e2) {
-                return Collections.emptyList();
-            }
-        }
+    public Map<String,Object> getGrnHeader(int id){
+        var rows=jdbc.queryForList("SELECT Id,DocumentTypeId,BranchesId FROM dbo.InvGrn WHERE Id=? AND OrganizationId=? AND CompanyId=? AND FinancialYearId=?",id,context.currentOrganizationId(),context.currentCompanyId(),context.currentFinancialYearId());
+        if(rows.isEmpty())throw new ResponseStatusException(NOT_FOUND,"GRN not found in this company and financial year");var scoped=copy(rows.get(0));int type=i(scoped,"DocumentTypeId");access(type);if(!branches(type).contains(i(scoped,"BranchesId")))throw new ResponseStatusException(NOT_FOUND,"GRN not found in your allocated branches");
+        return jdbc.queryForMap("EXEC dbo.Sp_InvGrn_GetAllMethod @Id=?,@Activity='ReadById'",id);
     }
-
-    private boolean financialYearCheck(int yearId) {
-        return yearId > 0;
+    public List<Map<String,Object>> getGrnDetails(int id){
+        var h=copy(getGrnHeader(id));String activity=switch(i(h,"DocumentTypeId")){case 46,165,167,169,143->"ReadByInvGrnID";case 47->"ReadByInvGrnIDTrading";case 48,701->"ReadByInvGrnIDStore";case 137,217->"ReadByInvGrnIdDirect";case 1602,1618,1858->"ReadByInvGrnID_Engr";default->throw new IllegalArgumentException("Unsupported GRN detail type");};
+        return jdbc.queryForList("EXEC dbo.Sp_InvGrnDetail_GetAllMethod @Id=?,@Activity=?",id,activity);
+    }
+    public List<Map<String,Object>> selectionRows(List<Map<String,Object>> supplied,int type){
+        var pending=getPendingGrns(0,0,type,0,null,null,null,null,null);var indexed=new HashMap<Integer,Map<String,Object>>();for(var row:pending)indexed.put(i(copy(row),"Id"),row);
+        var result=new ArrayList<Map<String,Object>>();var seen=new HashSet<Integer>();
+        for(var raw:supplied){int id=i(copy(raw),"Id");if(!seen.add(id)||!indexed.containsKey(id))throw new IllegalArgumentException("A selected GRN is no longer pending or is outside your allocated branches");result.add(indexed.get(id));}return result;
     }
 }
